k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goserver
  labels:
    name: goserver
spec:
  rules:
  - host: goserver.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goserver
            port:
              number: 80
              protocol: TCP
      - pathType: Prefix
        path: "/checkout"
        backend:
          service:
            name: service-checkout
            port:
              number: 3000
              protocol: TCP
